syntax = "proto3";

package client;

import "types.proto";

option go_package = "github.com/astriaorg/go-sequencer-client";

// A response containing the balance of an account.
message BalanceResponse {
  uint64 height = 2;
  client.Uint128 balance = 3;
}

// A response containing the current nonce for an account.
message NonceResponse {
  uint64 height = 2;
  uint32 nonce = 3;
}
