// generate go files with:
// go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
// protoc -I=. --go_out=. types.proto transaction.proto

syntax = "proto3";

package client;

import "types.proto";

option go_package = "github.com/astriaorg/go-sequencer-client";

// `SignedTransaction` is a transaction that has
// been signed by the given public key.
// It wraps an `UnsignedTransaction` with a 
// signature and public key.
message SignedTransaction {
    bytes signature = 1;
    bytes public_key = 2;
    UnsignedTransaction transaction = 3;
}

// `UnsignedTransaction` is a transaction that does 
// not have an attached signature.
// Note: `value` must be set, it cannot be `None`.
message UnsignedTransaction {
    uint32 nonce = 1;
    repeated Action actions = 2;
    // the asset used to pay the transaction fee
    bytes fee_asset_id = 3;
}


message Action {
    oneof value {
        TransferAction transfer_action = 1;
        SequenceAction sequence_action = 2;
    }   
}

// `TransferAction` represents a value transfer transaction.
//
// Note: all values must be set (ie. not `None`), otherwise it will
// be considered invalid by the sequencer.
message TransferAction {
    bytes to = 1;
    client.Uint128 amount = 2;
}

// `SequenceAction` represents a transaction destined for another
// chain, ordered by the sequencer.
//
// It contains the chain ID of the destination chain, and the
// opaque transaction data.
message SequenceAction {
    bytes chain_id = 1;
    bytes data = 2;
}
